@@ -1,5 +1,6 @@
 # happy.py
-# An implementation of RFC 6555 (Happy Eyeballs)
+# An implementation of RFC 6555 (Happy Eyeballs).
+# See: https://tools.ietf.org/html/rfc6555
 
 from curio import socket, TaskGroup, ignore_after, run
 import itertools
@@ -10,41 +11,40 @@ async def open_tcp_stream(hostname, port, delay=0.3):
     if not targets:
         raise OSError(f'nothing known about {hostname}:{port}')
 
-    # Group the targets into different address families (i.e., AF_INET, AF_INET6)
-    families = { af: list(group)
-                 for af, group in itertools.groupby(targets, key=lambda t: t[0]) }
+    # Cluster the targets into unique address families (e.g., AF_INET, AF_INET6, etc.)
+    families = [ list(g) for _, g in itertools.groupby(sorted(targets), key=lambda t: t[0]) ]
 
-    # Arrange the targets to interleave address families. Looks scary, but it's this
-    # { k1: [a, b], k2: [x, y] } -> [ a, x, b, y ]
-    targets = itertools.chain(*zip(*families.values()))
+    # Interleave the targets by address families
+    #  [ [a, b], [x, y] ] -> [ a, x, b, y ]
+    targets = itertools.chain(*zip(*families))
 
-    # List of socket-related errors (if any)
-    errors = []
-
-    # Connection attempts are made to each target, but staggered with a delay.
-    # Each connection attempt is launched in its own task.  The first successful
-    # connection causes every other task to immediately cancel.
+    # Task group to manage concurrent tasks. There can only be one winner.
     async with TaskGroup(wait=None) as group:
-        # Task that attempts to make a connection
+
+        # Function to attempt a connection request
         async def try_connect(sockargs, addr):
             sock = socket.socket(*sockargs)
             try:
                 await sock.connect(addr)
                 return sock
-            except OSError as e:
+            except Exception:
                 await sock.close()
                 raise
 
+        # List of accumulated errors to report in case of total failure
+        errors = []
+
+        # Walk the list of targets and try connections with a staggered delay
         for *sockargs, _, addr in targets:
             await group.spawn(try_connect, sockargs, addr)
-            async with ignore_after(delay):
-                task = await group.next_done()
-                try:
-                    return task.result
-                except OSError as e:
-                    errors.append(e)
+            try:
+                sock = await ignore_after(delay, group.next_result)
+                if sock:
+                    return sock     # Note: Returning cancels all remaining tasks
+            except OSError as e:
+                errors.append(e)
 
-    raise OSError(errors)
+        raise OSError(errors)
 
 async def main():
     result = await open_tcp_stream('www.python.org', 80)
